2010-09-25  Andrey Kotlarski  <m00naticus@gmail.com>

	* w3m-lnum.el: Update Commentary section.
	(w3m-link-set-overlay): New macro.
	(w3m-link-set-numbering, w3m-goto-next-anchor-or-image): New
	functions.
	(w3m-link-numbering): Refactor, use `w3m-link-set-numbering'.
	(w3m-read-int-interactive): Echo currently to be selected element.
	(w3m-with-linknum): Update docstring.
	(w3m-highlight-numbered-anchor): Properly highlight and
	unhighlight multiline elements and return selection info.
	(w3m-get-anchor-info): Always return 4 element list.
	(w3m-go-to-linknum): Echo `w3m-current-url' for default selection.
	(w3m-linknum-follow): Add support for toggling non link images.
	Inverse prefix argument behaviour for some elements.
	(w3m-linknum-toggle-inline-image, w3m-linknum-edit-this-url)
	(w3m-linknum-print-this-url): Cosmetic indentation changes.

2010-09-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-init-file): Allow nil.  Suggested by Leo.

2010-09-09  Leo  <sdl.web@gmail.com>

	* w3m.el (w3m-input-url): Pass DEFAULT argument to completing-read,
	instead of replacing its return value, to enable a user to edit.

2010-09-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-active-region-or-url-at-point): Remove only newlines and
	leading and trailing whitespace in region string.
	(w3m-input-url): Treat INITIAL if it is "" as nil but don't mind region
	even if it is active; treat DEFAULT if it is "" as nil but don't regard
	to w3m-home-page; always show DEFAULT if any within prompt string.
	Suggested by Leo <sdl.web@gmail.com>.

2010-09-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-lnum.el (w3m-read-int-interactive): Make it work for XEmacs
	(note: `?<' is not `eq' to `60' in XEmacs, for example).

2010-09-06  Andrey Kotlarski  <m00naticus@gmail.com>

	* w3m-lnum.el (w3m-linknum-remove-overlays): Simplified.
	(w3m-link-numbering-mode): Using `or' instead of `unless'.
	(w3m-read-int-interactive): Added ability to scroll page while
	selecting number.
