@@ -1,6 +1,6 @@
 ;;; w3m-mail.el --- an interface to mail-user-agent for sending web pages
 
-;; Copyright (C) 2006, 2009 TSUCHIYA Masatoshi
+;; Copyright (C) 2006, 2009, 2010 TSUCHIYA Masatoshi
 
 ;; Author: Katsumi Yamaoka <yamaoka@jpl.org>
 ;; Keywords: w3m, WWW, hypermedia
@@ -243,7 +243,7 @@ the one such as \"text/html\", and the rest are the same as those of
     (require 'vm-startup)
     (compose-mail to subject other-headers)
     (add-to-list 'mail-send-actions `(kill-buffer ,buffer))
-    (w3m-add-local-hook 'kill-buffer-hook `(lambda nil (kill-buffer ,buffer)))
+    (add-hook 'kill-buffer-hook `(lambda nil (kill-buffer ,buffer)) nil t)
     (w3m-mail-goto-body-and-clear-body)
     (w3m-mail-position-point
      (prog1
