@@ -1,3 +1,13 @@
+2010-10-06  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-ems.el (w3m-add-local-hook, w3m-remove-local-hook): Abolish.
+
+	* mime-w3m.el (mime-display-message)
+	* w3m-mail.el (w3m-mail-compose-with-vm)
+	* w3m.el (w3m-set-buffer-unseen, w3m-set-buffer-seen)
+	(w3m-buffer-setup): Don't use w3m-add-local-hook and
+	w3m-remove-local-hook.
+
 2010-09-25  Andrey Kotlarski  <m00naticus@gmail.com>
 
 	* w3m-lnum.el: Update Commentary section.
